--- a/examples/app_hires_DAS_fixed/.cproject
+++ b/examples/app_hires_DAS_fixed/.cproject
@@ -225,6 +225,9 @@
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_i2c/doc/rst}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_i2c/doc/rst/images}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_mic_array_board_support/doc/pdf}&quot;"/>
+									<listOptionValue builtIn="false" value="/home/andrew/vda_view/Installs/Linux/target/include/xc"/>
+									<listOptionValue builtIn="false" value="/home/andrew/vda_view/Installs/Linux/target/include"/>
+									<listOptionValue builtIn="false" value="/home/andrew/vda_view/Installs/Linux/target/include/clang"/>
 								</option>
 								<inputType id="com.xmos.cdt.xc.compiler.input.74055339" name="XC" superClass="com.xmos.cdt.xc.compiler.input"/>
 							</tool>
@@ -577,6 +580,8 @@
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_i2c/doc/rst}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_i2c/doc/rst/images}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_mic_array_board_support/doc/pdf}&quot;"/>
+									<listOptionValue builtIn="false" value="/home/andrew/vda_view/Installs/Linux/target/include"/>
+									<listOptionValue builtIn="false" value="/home/andrew/vda_view/Installs/Linux/target/include/clang"/>
 								</option>
 								<inputType id="com.xmos.cdt.c.compiler.input.c.964068649" name="C" superClass="com.xmos.cdt.c.compiler.input.c"/>
 							</tool>
@@ -935,6 +940,9 @@
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_i2c/doc/rst}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_i2c/doc/rst/images}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_mic_array_board_support/doc/pdf}&quot;"/>
+									<listOptionValue builtIn="false" value="/home/andrew/vda_view/Installs/Linux/target/include"/>
+									<listOptionValue builtIn="false" value="/home/andrew/vda_view/Installs/Linux/target/include/clang"/>
+									<listOptionValue builtIn="false" value="/home/andrew/vda_view/Installs/Linux/target/include/c++/v1"/>
 								</option>
 								<inputType id="com.xmos.cdt.cxx.compiler.input.cpp.317483397" name="C++" superClass="com.xmos.cdt.cxx.compiler.input.cpp"/>
 							</tool>
