--- a/tests/unit/CMakeLists.txt
+++ b/tests/unit/CMakeLists.txt
@@ -6,7 +6,7 @@ set(XMOS_SANDBOX_DIR    ${CMAKE_CURRENT_LIST_DIR}/../../..)
 
 set(APP_HW_TARGET           XK-EVK-XU316)
 set(APP_INCLUDES src)
-set(APP_DEPENDENT_MODULES "lib_mic_array" "lib_unity(2.5.2)")
+set(APP_DEPENDENT_MODULES "lib_mic_array" "lib_unity(main)") #TODO release lib_unity
 
 # conditional depending on target
 include(CheckSymbolExists)
