--- a/tests/signal/TwoStageDecimator/CMakeLists.txt
+++ b/tests/signal/TwoStageDecimator/CMakeLists.txt
@@ -4,7 +4,7 @@ project(tests-signal-decimator)
 
 set(XMOS_SANDBOX_DIR    ${CMAKE_CURRENT_LIST_DIR}/../../../..)
 
-include(${CMAKE_CURRENT_LIST_DIR}/../../../examples/deps.cmake)
+set(APP_DEPENDENT_MODULES   "lib_mic_array")
 
 set(APP_HW_TARGET       XK-EVK-XU316)
 
